--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <!-- 햄버거 버튼 추가  -->
+ <i class="fas fa-bars hide icon-button" onclick="openNav()"></i>
+ <i class="fas fa-search icon-button" onclick="openSearchBox()"></i>
+                <span id="input-area">
+                    <input type="text" id="search-input" placeholder="search" />
+                    <button class="search-button" onclick="searchNews()">Go</button>
+                </span>
+
     <section class="container"></section>
     <section>
       <div class="head-line">
@@ -23,21 +31,14 @@
         </svg>
       </div>
       <div class="menus">
-        <button>Sport</button>
-        <button>Tech</button>
-        <button>World</button>
-        <button>Finance</button>
-        <button>Politics</button>
         <button>Business</button>
-        <button>Economics</button>
         <button>Entertainment</button>
-        <button>Beauty</button>
-        <button>Travel</button>
-        <button>Music</button>
-        <button>Food</button>
+        <button>General</button>
+        <button>Health</button>
         <button>Science</button>
-        <button>Gaming</button>
-        <button>Energy</button>
+        <button>Sports</button>
+        <button>Technology</button>
+
       </div>
     </section>
     <section id="news-board">
