--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!-- 햄버거 버튼 추가  -->
-    <i class="fas fa-bars hide icon-button" onclick="openNav()"></i>
     <i class="fas fa-search icon-button" onclick="openSearchBox()"></i>
     <span id="input-area">
       <input type="text" id="search-input" placeholder="search" />
@@ -45,6 +43,30 @@
         <div class="col-lg-4"></div>
       </div>
     </section>
+
+    <div class="side-menu" id="mySidenav">
+      <button class="closebtn" onclick="closeNav()">&times;</button>
+      <div class="side-menu-list" id="menu-list">
+        <button>Sport</button>
+        <button>Tech</button>
+        <button>World</button>
+        <button>Finance</button>
+        <button>Politics</button>
+        <button>Business</button>
+        <button>Economics</button>
+        <button>Entertainment</button>
+        <button>Beauty</button>
+        <button>Travel</button>
+        <button>Music</button>
+        <button>Food</button>
+        <button>Science</button>
+        <button>Gaming</button>
+        <button>Energy</button>
+      </div>
+    </div>
+
+    <!-- 햄버거 버튼 추가  -->
+    <i class="fas fa-bars hide icon-button" onclick="openNav()"></i>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
