--- a/index.html
+++ b/index.html
@@ -53,13 +53,14 @@
         </div>
 
         <div class="menus" id="menu-list">
-        <button>Business</button>
-        <button>Entertainment</button>
-        <button>General</button>
-        <button>Health</button>
-        <button>Science</button>
-        <button>Sports</button>
-        <button>Technology</button>
+          <button>Business</button>
+          <button>Entertainment</button>
+          <button>General</button>
+          <button>Health</button>
+          <button>Science</button>
+          <button>Sports</button>
+          <button>Technology</button>
+        </div>
       </div>
       <section id="news-board">
         <div class="row news">
