--- a/index.html
+++ b/index.html
@@ -66,6 +66,15 @@
           <div class="col-lg-4"></div>
         </div>
       </section>
+
+<nav aria-label="Page navigation example" class="pagenation-nav">
+  <ul class="pagination">
+    
+
+  </ul>
+</nav>
+
+
     </section>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
